classification
Title: complex.__format__ has incorrect default alignment
Type: behavior Stage: committed/rejected
Components: Interpreter Core Versions: Python 3.2, Python 3.1, Python 2.7
process
Status: closed Resolution: accepted
Dependencies: Superseder:
Assigned To: eric.smith Nosy List: eric.smith
Priority: low Keywords:

Created on 2010-02-22 16:19 by eric.smith, last changed 2010-02-22 19:28 by eric.smith. This issue is now closed.

Messages (2)
msg99773 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2010-02-22 16:19
Complex uses left alignment by default, but should use right alignment like the other numeric types.

>>> format(1+1j, '20.0')
'(1+1j)              '

>>> format(1.0, '20.0')
'               1e+00'

>>> format(1, '20')
'                   1'
msg99816 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2010-02-22 19:28
Checked in:
trunk r78329
py3k r78333
release31-maint r78334
History
Date User Action Args
2010-02-22 19:28:15eric.smithsetstatus: open -> closed
priority: low
messages: + msg99816

resolution: accepted
stage: committed/rejected
2010-02-22 16:19:02eric.smithcreate