Merged revisions 78333 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

................
  r78333 | eric.smith | 2010-02-22 13:54:44 -0500 (Mon, 22 Feb 2010) | 9 lines

  Merged revisions 78329 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r78329 | eric.smith | 2010-02-22 13:33:47 -0500 (Mon, 22 Feb 2010) | 1 line

    Issue #7988: Fix default alignment to be right aligned for complex.__format__. Now it matches other numeric types.
  ........
................